# turtle-island

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css
.github/workflows/: ci_docs.yml  ci_tests.yml
articles/: intro.html
docs/: _quarto.yml  _sidebar.yml  objects.json  objects.txt  styles.css
docs/_site/: search.json  sitemap.xml
docs/_site/articles/: howtos.html  intro.html  pg.html
docs/_site/reference/: bucketize.html  bucketize_lit.html  bulk_append.html  case_when.html  cycle.html  index.html  is_every_nth_row.html  make_concat_str.html  make_hyperlink.html  make_index.html  make_tooltip.html  move_cols_to_end.html  move_cols_to_start.html  shift.html
docs/_site/site_libs/bootstrap/: bootstrap-dark-f3d40ad4450d6c1c8955b2c15d294099.min.css  bootstrap-dark-f6c82303ea4dee0e56684c36b30a5405.min.css  bootstrap-fb9958ef128f500e8ef8a7ad784b3627.min.css
docs/articles/: intro.qmd
docs/reference/: bucketize.qmd  bucketize_lit.qmd  bulk_append.qmd  case_when.qmd  cycle.qmd  index.qmd  is_every_nth_row.qmd  make_concat_str.qmd  make_hyperlink.qmd  make_index.qmd  make_tooltip.qmd  move_cols_to_end.qmd  move_cols_to_start.qmd  shift.qmd
reference/: bucketize.html  bucketize_lit.html  bulk_append.html  case_when.html  cycle.html  index.html  is_every_nth_row.html  make_concat_str.html  make_hyperlink.html  make_index.html  make_tooltip.html  move_cols_to_end.html  move_cols_to_start.html  prepend.html  shift.html
site_libs/bootstrap/: bootstrap-5f25b49622edc12b771b0d8169840da3.min.css  bootstrap-6178ae95a9906cbff80095ff0e0997a9.min.css  bootstrap-b61c25047dc465742505cbddcb417442.min.css
src/turtle_island/: __init__.py  _utils.py  general_expr.py
src/turtle_island/exprs/: _helpers.py  common.py  core.py  general.py  html.py
tests/: conftest.py  test__utils.py  test_general_expr.py  test_html_expr.py
tests/exprs/: test__helpers.py  test_common.py  test_core.py  test_general.py  test_html.py
