[project]
name = "turtle-island"
version = "0.1.0"
description = "A Utility Kit for Polars Expressions."
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "jupyterlab>=4.4.4",
    "pre-commit>=4.2.0",
]

docs = [
    "great-tables>=0.17.0",
    "quartodoc>=0.11.1",
]

test = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]


[tool.ruff]
line-length = 75
