[project]
name = "turtle-island"
version = "0.0.3"
description = "A Utility Kit for Polars Expressions."
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.10"
authors = [{ name = "Jerry Wu", email = "jerry@ycwu.space"}]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "jupyterlab>=4.4.4",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
]

docs = [
    "quartodoc>=0.11.1",
    "great-tables>=0.18.0",
]

test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=turtle_island --cov-report=term-missing --cov-branch --cov-report=xml"

[tool.coverage.run]
omit = ["tests/*"]

[tool.ruff]
line-length = 79
